add env file with mock variables

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_GOOGLE_CLIENT_ID = REACT_APP_GOOGLE_CLIENT_ID
+REACT_APP_GOOGLE_CLIENT_ID = 239886240619-n34g3g43g3grk2o58q34g34g34g3vcf3av753qdb2.apps.googleusercontent.com
+REACT_APP_GOOGLE_API_KEY = A3ergergegCpyG0x3g3g35gdQME34g34g34NNoqrk
